--- a/hosts.yaml
+++ b/hosts.yaml
@@ -7,18 +7,8 @@ all:
           ansible_ssh_user: root
         jezreel:
           ansible_ssh_user: root
-
-    tailscales:
-      hosts:
-        suse-proxy:
+        david:
           ansible_ssh_user: root
-    matrix:
+    docker:
       hosts:
-        linode1:
-          ansible_ssh_user: root
-          ansible_host: 45.33.114.40
-        synapse:
-    ungrouped:
-      hosts:
-        teamspeak5:
-        umbrel:
+        jellyfin:
