add gunnerarma3 server

--- a/hosts.yaml
+++ b/hosts.yaml
@@ -12,7 +12,7 @@ all:
     docker:
       hosts:
         jellyfin:
+        gunnerarma3:
     ungrouped:
       hosts:
-        gunnermc:
         avorion:
