--- a/main.yaml
+++ b/main.yaml
@@ -10,9 +10,18 @@
   become: true
   tasks:
     - name: Install common tools
-      ansible.builtin.package:
+      ansible.builtin.dnf:
         name:
           - just
+          # rust dependencies
+          - dnf-plugins-core
+          - cmake
+          - gcc
+          - clang
+          - make
+          - rust
+          - cargo
+          - rustfmt
         state: present
       become: true
 
