--- a/hosts.yml
+++ b/hosts.yml
@@ -9,6 +9,8 @@ all:
           ansible_ssh_user: root
         david:
           ansible_ssh_user: root
+        pbs:
+          ansible_ssh_user: root
     docker:
       hosts:
         jellyfin:
